# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = yarnrunner-python
version = 0.2.4
author = Sam Weaver
author_email = sweaver@relaypro.com
description = An unofficial Python interpreter for compiled Yarn Spinner programs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/relaypro-open/YarnRunner-Python
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = yarnrunner_python
python_requires = >=3.6
install_requires =
    protobuf >= 3.19